# mvp

./: .gitignore  CODEOWNERS  LICENSE  README.md  development.md  main.py  onboarding.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  style.md  style[deprecate].md  tox.ini  updater.py.future
docs/: capy_app.backend.db.documents.rst  capy_app.backend.db.rst  capy_app.backend.modules.rst  capy_app.backend.rst  capy_app.backend.utils.rst  capy_app.frontend.cogs.essentials.rst  capy_app.frontend.cogs.features.rst  capy_app.frontend.cogs.handlers.rst  capy_app.frontend.cogs.rst  capy_app.frontend.cogs.tools.rst  capy_app.frontend.interactions.bases.rst  capy_app.frontend.interactions.rst  capy_app.frontend.rst  capy_app.frontend.utils.rst  capy_app.rst  conf.py  index.rst  modules.rst  onboarding.md
src/: config.py  main.py
src/capy_app/: config.py  main.py  sys_logger.py
src/capy_app/backend/db/: __init__.py  database.py
src/capy_app/backend/mods/: email.py
src/capy_app/backend/modules/: email.py
src/capy_app/backend/res/: majors.txt
src/capy_app/backend/utils/: timestamp.py
src/capy_app/frontend/: bot.py  config_colors.py
src/capy_backend/: __init__.py
src/capy_backend/db/: __init__.py  database.py  database_bk.py
src/capy_backend/mods/: email.py
src/capy_discord/: bot.py
src/capy_discord/cogs/: event.py  guild.py  ping.py  profile.py
tests/: conftest.py
tests/capy_backend/db/: database_test.py  document_test.py  timestamp_test.py
tests/capy_backend/mods/: email_test.py
(+99 files in other folders)
