[options]
packages = 
    capy_app
python_requires = >=3.6
package_dir =
    =src
zip_safe = no


[options.extras_require]
testing =
    black==24.8.0
    flake8==7.1.1
    mongomock-motor==0.0.34
    pytest==8.3.4
    pytest-asyncio==0.25.2
    pytest-cov==6.0.0
    setuptools==75.8.0
    mypy==1.14.1
    tox==4.23.2
    sphinx==8.1.3
    sphinx-rtd-theme==3.0.2
    sphinx_autodoc_typehints==3.0.1


[options.package_data]
capy_app = py.typed

[flake8]
max-line-length = 160